--- a/index.html
+++ b/index.html
@@ -28,6 +28,27 @@
       </div>
     </header>
     <main class="container">
+      <div class="promo">
+        <h1>Седона - небольшой городок в Аризоне, заслуживающий большего</h1>
+        <p> Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон</p>
+      </div>
+      <div class "reason-picture">
+        <h2 class="minor-header">Настоящий городок</h2>
+        <span>-№1-</span>
+        <p>Седона - не аттракцион для туристов, там течет своя жизнь</p>
+      </div>
+      <section class="reason-list">
+        <div class="reason-point">
+          <h2>Жилье</h2>
+          <p>Рекомендуем пожить в настоязем мотеле, все как в кино!</p>
+        </div>
+        <div class="reason-point">
+          <h2>Еда</h2>
+          <p>Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
+        <div class="reason-point">
+          <h2>Сувениры</h2>
+          <p>Не только китайского, но и местного производства!</p>
+      </section>
     </main>
   </body>
 </html>
