--- a/index.html
+++ b/index.html
@@ -33,21 +33,55 @@
         <p> Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон</p>
       </div>
       <div class "reason-picture">
-        <h2 class="minor-header">Настоящий городок</h2>
+        <b class="minor-header">Настоящий городок</h2>
         <span>-№1-</span>
         <p>Седона - не аттракцион для туристов, там течет своя жизнь</p>
       </div>
       <section class="reason-list">
         <div class="reason-point">
-          <h2>Жилье</h2>
+          <b>Жилье</b>
           <p>Рекомендуем пожить в настоязем мотеле, все как в кино!</p>
         </div>
         <div class="reason-point">
-          <h2>Еда</h2>
+          <b>Еда</b>
           <p>Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
         <div class="reason-point">
-          <h2>Сувениры</h2>
+          <b>Сувениры</b>
           <p>Не только китайского, но и местного производства!</p>
+      </section>
+      <div class "reason-picture">
+        <b class="minor-header">Там есть мост дьявола!</h2>
+        <span>-№2-</span>
+        <p>Да, по нему можно пройти! Если конечно вы осмелитесь</p>
+      <section class="reason-list">
+        <div class="reason-point">
+          <b>Небольшая площадь</b>
+          <span>-№3-</span>
+          <p>Все достопримечательности находятся очень близко</p>
+        </div>
+        <div class="reason-pont">
+          <b>Красивая дорога</b>
+          <span>-№4-</span>
+          <p>Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+        </div>
+        <div class="reason-point">
+          <b>Мало туристов</b>
+          <span>-№5-</span>
+          <p>Большинство едет в Гранд Каньон и толпится там</p>
+      </section>
+      <section class="if-interest">
+        <h2>Заинтересовались?</h2>
+        <p>Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
+        <div class="search-block">
+          <h3>Поиск гостиницы в Седоне</h3>
+          <form action="#" method="post">
+            <label for="date-in">Дата заезда:</label>
+            <input type="date" id="date-in" name="date-in"/>
+            <label for="date-out">Дата выезда:</label>
+            <input type="date" id="date-out" name="date-out"/>
+            <input type="submit" value="Найти">
+          </form>
+        </div>
       </section>
     </main>
   </body>
