--- a/index.html
+++ b/index.html
@@ -77,12 +77,32 @@
           <form action="#" method="post">
             <label for="date-in">Дата заезда:</label>
             <input type="date" id="date-in" name="date-in"/>
+            <br>
             <label for="date-out">Дата выезда:</label>
             <input type="date" id="date-out" name="date-out"/>
+            <br>
+            <label for="adults">Взрослые:</label>
+            <input type="number" id="adults" name="adults" max="100" min="1" value="2">
+            <label for="children">Дети:</label>
+            <input type="number" id="children" name="children" max="100" min="1" value="0">
             <input type="submit" value="Найти">
           </form>
         </div>
       </section>
     </main>
+    <footer>
+      <section class="hashtag">
+        <a href="#" alt="#VISITSEDONA">
+      </section>
+      <section class="footer-social">
+        <a class="social-btn social-btn-twt" href="#">Vkontakte</a>
+        <a class="social-btn social-btn-fb" href="#">Facebook</a>
+        <a class="social-btn social-btn-youtube" href="#">Youtube</a>
+      </section>
+      <section class="footer-copyright">
+        <p>Website by</p>
+        <a class="btn" href="https://htmlacademy.ru">HTML Academy</a>
+      </section>
+    </footer>
   </body>
 </html>
