Final version index.html

--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
         <h1>Седона - небольшой городок в Аризоне, заслуживающий большего</h1>
         <p> Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон</p>
       </div>
-      <div class "reason-picture">
-        <b class="minor-header">Настоящий городок</h2>
+      <div class="reason-picture">
+        <b class="minor-header">Настоящий городок</b>
         <span>-№1-</span>
         <p>Седона - не аттракцион для туристов, там течет своя жизнь</p>
       </div>
@@ -45,14 +45,17 @@
         <div class="reason-point">
           <b>Еда</b>
           <p>Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
+        </div>
         <div class="reason-point">
           <b>Сувениры</b>
           <p>Не только китайского, но и местного производства!</p>
+        </div>
       </section>
-      <div class "reason-picture">
-        <b class="minor-header">Там есть мост дьявола!</h2>
+      <div class="reason-picture">
+        <b class="minor-header">Там есть мост дьявола!</b>
         <span>-№2-</span>
         <p>Да, по нему можно пройти! Если конечно вы осмелитесь</p>
+      </div>
       <section class="reason-list">
         <div class="reason-point">
           <b>Небольшая площадь</b>
@@ -68,6 +71,7 @@
           <b>Мало туристов</b>
           <span>-№5-</span>
           <p>Большинство едет в Гранд Каньон и толпится там</p>
+        </div>
       </section>
       <section class="if-interest">
         <h2>Заинтересовались?</h2>
@@ -92,7 +96,7 @@
     </main>
     <footer>
       <section class="hashtag">
-        <a href="#" alt="#VISITSEDONA">
+        <img src="#" alt="#VISITSEDONA">
       </section>
       <section class="footer-social">
         <a class="social-btn social-btn-twt" href="#">Vkontakte</a>
