Catalog.html started

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
               <a href="#">Гостиницы</a>
           </ul>
         </nav>
-        <div class="index-log">
+        <div class="index-logo">
           <img src="#" alt="Sedona">
         </div>
       </div>
