--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
           </ul>
         </nav>
         <div class="index-logo">
-          <img src="#" alt="Sedona">
+          <a href="#">
+            <img src="#" alt="Sedona">
+          </a>
         </div>
       </div>
     </header>
@@ -74,7 +76,7 @@
         </div>
       </section>
       <section class="if-interest">
-        <h2>Заинтересовались?</h2>
+        <h2 class="minor-header">Заинтересовались?</h2>
         <p>Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
         <div class="search-block">
           <h3>Поиск гостиницы в Седоне</h3>
