First version catalog.html ready

--- a/catalog.html
+++ b/catalog.html
@@ -56,7 +56,71 @@
         <br>
         <input type="sumbit" value="Показать">
       </form>
-
+      <div class="search-result">
+        <span>Найдено: 3</input>
+        <h4>Сортировка:</h4>
+        <ul>
+          <li>
+            <a href="#">По цене</a>
+          </li>
+          <li>
+            <a href="#">По типу</a>
+          </li>
+          <li>
+            <a href="#">По рейтингу</a>
+          </li>
+        </ul>
+        <div class="search-button">
+          <a class="up-button" href="#">Вверх</a>
+          <a class="down-button" href="#">Вниз</a>
+        </div>
+      </div>
+      <div class="search-show">
+        <article>
+          <h2>AMARA RESORT & SPA</h2>
+          <span class="article-info">Гостиница</span>
+          <span class="article-info">От 4000 р.</span>
+          <img class="article-img" src="">
+          <a class="more-btn">Подробнее</a>
+          <a class="book-btn"><Забронировать</a>
+          <img class="stars" src="">
+          <span class="rate">Рейтинг: 8,5</span>
+        </article>
+        <article>
+          <h2>DESERT QUAIL INN</h2>
+          <span class="article-info">Мотель</span>
+          <span class="article-info">От 3000 р.</span>
+          <img class="article-img" src="">
+          <a class="more-btn">Подробнее</a>
+          <a class="book-btn"><Забронировать</a>
+          <img class="stars" src="">
+          <span class="rate">Рейтинг: 8,9</span>
+        </article>
+        <article>
+          <h2>VILLAS AT POCO DIABLO</h2>
+          <span class="article-info">Апартаменты</span>
+          <span class="article-info">От 2000 р.</span>
+          <img class="article-img" src="">
+          <a class="more-btn">Подробнее</a>
+          <a class="book-btn"><Забронировать</a>
+          <img class="stars" src="">
+          <span class="rate">Рейтинг: 9,2</span>
+        </article>
+      </div>
     </main>
+    <footer class="main-footer">
+      <section class="hashtag">
+        <img src="#" alt="#VISITSEDONA">
+      </section>
+      <section class="footer-social">
+        <a class="social-btn social-btn-twt" href="#">Vkontakte</a>
+        <a class="social-btn social-btn-fb" href="#">Facebook</a>
+        <a class="social-btn social-btn-youtube" href="#">Youtube</a>
+      </section>
+      <section class="footer-copyright">
+        <p>Website by</p>
+        <a class="btn" href="https://htmlacademy.ru">HTML Academy</a>
+      </section>
+    </footer>
   </body>
 </html>
