--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         </div>
       </section>
     </main>
-    <footer>
+    <footer class="main-footer">
       <section class="hashtag">
         <img src="#" alt="#VISITSEDONA">
       </section>
