--- a/catalog.html
+++ b/catalog.html
@@ -16,10 +16,10 @@
               <a href="#">Фото и видео</a>
             </li>
             <li>
-              <a href="#">Карта штата></a>
+              <a href="#">Карта штата</a>
             </li>
             <li>
-              <a href="#"Гостиницы></a>
+              <a href="#">Гостиницы</a>
             </li>
           </ul>
         </nav>
@@ -54,10 +54,10 @@
         <label><input type="range" min="0" max="10000" step="100" value="3000">
         </label>
         <br>
-        <input type="sumbit" value="Показать">
+        <input type="submit" value="Показать">
       </form>
       <div class="search-result">
-        <span>Найдено: 3</input>
+        <span>Найдено: 3</span>
         <h4>Сортировка:</h4>
         <ul>
           <li>
@@ -80,30 +80,30 @@
           <h2>AMARA RESORT & SPA</h2>
           <span class="article-info">Гостиница</span>
           <span class="article-info">От 4000 р.</span>
-          <img class="article-img" src="">
+          <img class="article-img" src="#" alt="Фото">
           <a class="more-btn">Подробнее</a>
-          <a class="book-btn"><Забронировать</a>
-          <img class="stars" src="">
+          <a class="book-btn">Забронировать</a>
+          <img class="stars" src="#" alt="Рейтинг">
           <span class="rate">Рейтинг: 8,5</span>
         </article>
         <article>
           <h2>DESERT QUAIL INN</h2>
           <span class="article-info">Мотель</span>
           <span class="article-info">От 3000 р.</span>
-          <img class="article-img" src="">
+          <img class="article-img" src="#" alt="Фото">
           <a class="more-btn">Подробнее</a>
-          <a class="book-btn"><Забронировать</a>
-          <img class="stars" src="">
+          <a class="book-btn">Забронировать</a>
+          <img class="stars" src="#" alt="Рейтинг">
           <span class="rate">Рейтинг: 8,9</span>
         </article>
         <article>
           <h2>VILLAS AT POCO DIABLO</h2>
           <span class="article-info">Апартаменты</span>
           <span class="article-info">От 2000 р.</span>
-          <img class="article-img" src="">
+          <img class="article-img" src="#" alt="Фото">
           <a class="more-btn">Подробнее</a>
-          <a class="book-btn"><Забронировать</a>
-          <img class="stars" src="">
+          <a class="book-btn">Забронировать</a>
+          <img class="stars" src="#" alt="Рейтинг">
           <span class="rate">Рейтинг: 9,2</span>
         </article>
       </div>
