--- a/index.html
+++ b/index.html
@@ -24,12 +24,15 @@
         </nav>
         <div class="index-logo">
           <a href="#">
-            <img src="#" alt="Sedona">
+            <img src="#" alt="Седона">
           </a>
         </div>
       </div>
     </header>
     <main class="container">
+      <div class="promo-picture">
+        <img src ="#" alt="О Седоне">
+      </div>
       <div class="promo">
         <h1>Седона - небольшой городок в Аризоне, заслуживающий большего</h1>
         <p> Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон</p>
