Images nearly ready

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Седона</title>
+    <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
     <header class="main-header">
@@ -10,21 +11,21 @@
         <nav class="main-navigation">
           <ul>
             <li>
-              <a href="#">Информация</a>
+              <a class="menu-font" href="#">Информация</a>
             </li>
             <li>
-              <a href="#">Фото и видео</a>
+              <a class="menu-font" href="#">Фото и видео</a>
             </li>
             <li>
-              <a href="#">Карта штата</a>
+              <a class="menu-font" href="#">Карта штата</a>
             </li>
             <li>
-              <a href="#">Гостиницы</a>
+              <a class="menu-font" href="#">Гостиницы</a>
           </ul>
         </nav>
         <div class="index-logo">
           <a href="#">
-            <img src="#" alt="Седона">
+            <img src="img/logo.png" width="100" height="50" alt="Седона">
           </a>
         </div>
       </div>
@@ -45,7 +46,7 @@
       <section class="reason-list">
         <div class="reason-point">
           <b>Жилье</b>
-          <p>Рекомендуем пожить в настоязем мотеле, все как в кино!</p>
+          <p>Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
         </div>
         <div class="reason-point">
           <b>Еда</b>
