--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     </header>
     <main class="container">
       <div class="promo-picture">
-        <img src ="#" alt="О Седоне">
+        <img src ="img/mainphoto.png" alt="О Седоне">
       </div>
       <div class="promo">
         <h1>Седона - небольшой городок в Аризоне, заслуживающий большего</h1>
