--- a/index.html
+++ b/index.html
@@ -11,16 +11,16 @@
         <nav class="main-navigation">
           <ul>
             <li>
-              <a class="menu-font" href="#">Информация</a>
+              <a href="#">Информация</a>
             </li>
             <li>
-              <a class="menu-font" href="#">Фото и видео</a>
+              <a href="#">Фото и видео</a>
             </li>
             <li>
-              <a class="menu-font" href="#">Карта штата</a>
+              <a href="#">Карта штата</a>
             </li>
             <li>
-              <a class="menu-font" href="#">Гостиницы</a>
+              <a href="#">Гостиницы</a>
           </ul>
         </nav>
         <div class="index-logo">
@@ -35,12 +35,12 @@
         <img src ="img/mainphoto.png" alt="О Седоне">
       </div>
       <div class="promo">
-        <h1>Седона - небольшой городок в Аризоне, заслуживающий большего</h1>
-        <p> Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон</p>
+        <h3>Седона - небольшой городок в Аризоне, заслуживающий большего</h3>
+        <span class="promo-speech"> Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон</span>
       </div>
       <div class="reason-picture">
         <b class="minor-header">Настоящий городок</b>
-        <span>-№1-</span>
+        <p>-№1-</p>
         <p>Седона - не аттракцион для туристов, там течет своя жизнь</p>
       </div>
       <section class="reason-list">
@@ -59,23 +59,23 @@
       </section>
       <div class="reason-picture">
         <b class="minor-header">Там есть мост дьявола!</b>
-        <span>-№2-</span>
+        <p>-№2-</p>
         <p>Да, по нему можно пройти! Если конечно вы осмелитесь</p>
       </div>
       <section class="reason-list">
         <div class="reason-point">
           <b>Небольшая площадь</b>
-          <span>-№3-</span>
+          <p>-№3-</p>
           <p>Все достопримечательности находятся очень близко</p>
         </div>
         <div class="reason-pont">
           <b>Красивая дорога</b>
-          <span>-№4-</span>
+          <p>-№4-</p>
           <p>Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
         </div>
         <div class="reason-point">
           <b>Мало туристов</b>
-          <span>-№5-</span>
+          <p>-№5-</p>
           <p>Большинство едет в Гранд Каньон и толпится там</p>
         </div>
       </section>
