--- a/catalog.html
+++ b/catalog.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Седона</title>
+    <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
     <header class="main-header">
@@ -25,7 +26,7 @@
         </nav>
         <div class="index-logo">
           <a href="#">
-            <img src="#" alt="Седона">
+            <img src="img/logo.png" width="100" height="50" alt="Седона">
           </a>
         </div>
       </div>
@@ -51,7 +52,7 @@
         <label for="apartments">Апартаменты</label>
         <input type="checkbox" name="apartments" id="apartments" checked>
         <br>
-        <h4>Стоимость в сутки (р):</h4>
+        <h2>Стоимость в сутки (р):</h2>
         <label for="price-in">От 0</label>
         <input type="range" name="price-from" id="price-in" min="0" max="10000" step="100" value="3000">
         <label for="price-out">До 3000</label>
@@ -60,9 +61,9 @@
         <input type="submit" value="Показать">
       </form>
       <div class="search-result">
-        <span>Найдено: 3</span>
-        <h4>Сортировка:</h4>
-        <ul>
+        <h3>Найдено: 3</h3>
+        <ul class= "sorting">
+        <span>Сортировка:</span>
           <li>
             <a href="#">По цене</a>
           </li>
@@ -83,46 +84,54 @@
           <h3>AMARA RESORT & SPA</h3>
           <p class="article-info">Гостиница</p>
           <p class="article-info">От 4000 р.</p>
-          <img class="article-img" src="#" alt="Фото">
+          <img class="article-img" src="img/hotel3.jpg" alt="Фото">
           <a class="more-btn">Подробнее</a>
           <a class="book-btn">Забронировать</a>
-          <img class="stars" src="#" alt="Рейтинг">
+          <img class="stars" src="img/4stars.png" alt="Рейтинг">
           <span class="rate">Рейтинг: 8,5</span>
         </article>
         <article>
           <h3>DESERT QUAIL INN</h3>
           <p class="article-info">Мотель</p>
           <p class="article-info">От 3000 р.</p>
-          <img class="article-img" src="#" alt="Фото">
+          <img class="article-img" src="img/hotel2.jpg" alt="Фото">
           <a class="more-btn">Подробнее</a>
           <a class="book-btn">Забронировать</a>
-          <img class="stars" src="#" alt="Рейтинг">
+          <img class="stars" src="img/3stars.png" alt="Рейтинг">
           <span class="rate">Рейтинг: 8,9</span>
         </article>
         <article>
           <h3>VILLAS AT POCO DIABLO</h3>
           <p class="article-info">Апартаменты</p>
           <p class="article-info">От 2000 р.</p>
-          <img class="article-img" src="#" alt="Фото">
+          <img class="article-img" src="img/hotel1.jpg" alt="Фото">
           <a class="more-btn">Подробнее</a>
           <a class="book-btn">Забронировать</a>
-          <img class="stars" src="#" alt="Рейтинг">
+          <img class="stars" src="img/2stars.png" alt="Рейтинг">
           <span class="rate">Рейтинг: 9,2</span>
         </article>
       </div>
     </main>
     <footer class="main-footer">
       <section class="hashtag">
-        <img src="#" alt="#VISITSEDONA">
+        <h3>#VISITSEDONA</h3>
       </section>
       <section class="footer-social">
-        <a class="social-btn social-btn-twt" href="#">Vkontakte</a>
-        <a class="social-btn social-btn-fb" href="#">Facebook</a>
-        <a class="social-btn social-btn-youtube" href="#">Youtube</a>
+        <a class="social-btn social-btn-twt" href="#">
+          <img src="img/twitter.png" alt="Twitter">
+        </a>
+        <a class="social-btn social-btn-fb" href="#">
+          <img src="img/facebook.png" alt="Facebook">
+        </a>
+        <a class="social-btn social-btn-youtube" href="#">
+          <img src="img/youtube.png" alt="Youtube">
+        </a>
       </section>
       <section class="footer-copyright">
-        <p>Website by</p>
-        <a class="btn" href="https://htmlacademy.ru">HTML Academy</a>
+        <p class="html-academy">Website by</p>
+        <a class="btn" href="https://htmlacademy.ru">
+          <img src="img/htmlacademy.png" alt="HTML Academy">
+        </a>
       </section>
     </footer>
   </body>
