--- a/index.html
+++ b/index.html
@@ -39,51 +39,56 @@
         <span class="promo-speech"> Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон</span>
       </div>
       <div class="reason-picture">
-        <b class="minor-header">Настоящий городок</b>
-        <p>-№1-</p>
-        <p>Седона - не аттракцион для туристов, там течет своя жизнь</p>
+        <img src ="img/usaflag.jpg" alt="Город">
+        <h4>Настоящий городок</h4>
+        <p class="picure-description">-№1-</p>
+        <p class="picure-description">Седона - не аттракцион для туристов, там течет своя жизнь</p>
       </div>
       <section class="reason-list">
         <div class="reason-point">
-          <b>Жилье</b>
+          <h5>Жилье</h5>
+          <img src ="img/house.png" alt="Жилье">
           <p>Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
         </div>
         <div class="reason-point">
-          <b>Еда</b>
+          <h5>Еда</h5>
+          <img src ="img/food.png" alt="Еда">
           <p>Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
         </div>
         <div class="reason-point">
-          <b>Сувениры</b>
+          <h5>Сувениры</h5>
+          <img src ="img/present.png" alt="Сувениры">
           <p>Не только китайского, но и местного производства!</p>
         </div>
       </section>
       <div class="reason-picture">
-        <b class="minor-header">Там есть мост дьявола!</b>
-        <p>-№2-</p>
-        <p>Да, по нему можно пройти! Если конечно вы осмелитесь</p>
+        <h4>Там есть мост дьявола!</h4>
+        <img src ="img/mountains.jpg" alt="Горы">
+        <p class="picure-description">-№2-</p>
+        <p class="picure-description">Да, по нему можно пройти! Если конечно вы осмелитесь</p>
       </div>
       <section class="reason-list">
         <div class="reason-point">
-          <b>Небольшая площадь</b>
+          <h5>Небольшая площадь</h5>
           <p>-№3-</p>
           <p>Все достопримечательности находятся очень близко</p>
         </div>
         <div class="reason-pont">
-          <b>Красивая дорога</b>
+          <h5>Красивая дорога</h5>
           <p>-№4-</p>
           <p>Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
         </div>
         <div class="reason-point">
-          <b>Мало туристов</b>
+          <h5>Мало туристов</h5>
           <p>-№5-</p>
           <p>Большинство едет в Гранд Каньон и толпится там</p>
         </div>
       </section>
       <section class="if-interest">
-        <h2 class="minor-header">Заинтересовались?</h2>
-        <p>Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
+        <span class="main-question">Заинтересовались?</span>
+        <p class="to-do">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
         <div class="search-block">
-          <h3>Поиск гостиницы в Седоне</h3>
+          <h6>Поиск гостиницы в Седоне</h6>
           <form action="#" method="post">
             <label for="date-in">Дата заезда:</label>
             <input type="date" id="date-in" name="date-in"/>
@@ -102,16 +107,24 @@
     </main>
     <footer class="main-footer">
       <section class="hashtag">
-        <img src="#" alt="#VISITSEDONA">
+        <h3>#VISITSEDONA</h3>
       </section>
       <section class="footer-social">
-        <a class="social-btn social-btn-twt" href="#">Vkontakte</a>
-        <a class="social-btn social-btn-fb" href="#">Facebook</a>
-        <a class="social-btn social-btn-youtube" href="#">Youtube</a>
+        <a class="social-btn social-btn-twt" href="#">
+          <img src="img/twitter.png" alt="Twitter">
+        </a>
+        <a class="social-btn social-btn-fb" href="#">
+          <img src="img/facebook.png" alt="Facebook">
+        </a>
+        <a class="social-btn social-btn-youtube" href="#">
+          <img src="img/youtube.png" alt="Youtube">
+        </a>
       </section>
       <section class="footer-copyright">
-        <p>Website by</p>
-        <a class="btn" href="https://htmlacademy.ru">HTML Academy</a>
+        <p class="html-academy">Website by</p>
+        <a class="btn" href="https://htmlacademy.ru">
+          <img src="img/htmlacademy.png" alt="HTML Academy">
+        </a>
       </section>
     </footer>
   </body>
