--- a/index.html
+++ b/index.html
@@ -107,13 +107,13 @@
     </main>
     <footer class="main-footer">
       <section class="hashtag">
-        <h3>#VISITSEDONA</h3>
+        <h3>#Visitsedona</h3>
       </section>
       <section class="footer-social">
-        <a class="social-btn social-btn-twt" href="#">
+        <a class="social-btn social-btn-twitter" href="#">
           <img src="img/twitter.png" alt="Twitter">
         </a>
-        <a class="social-btn social-btn-fb" href="#">
+        <a class="social-btn social-btn-facebook" href="#">
           <img src="img/facebook.png" alt="Facebook">
         </a>
         <a class="social-btn social-btn-youtube" href="#">
@@ -123,7 +123,7 @@
       <section class="footer-copyright">
         <p class="html-academy">Website by</p>
         <a class="btn" href="https://htmlacademy.ru">
-          <img src="img/htmlacademy.png" alt="HTML Academy">
+          <img src="img/htmlacademy.png" alt="html academy">
         </a>
       </section>
     </footer>
