--- a/catalog.html
+++ b/catalog.html
@@ -40,7 +40,7 @@
         <label for="parking">Парковка</label>
         <input type="checkbox" name="parking" id="parking">
         <br>
-        <label for="hotel">Wi-Fi</label>
+        <label for="hotel">Wi-fi</label>
         <input type="checkbox" name="wi-fi" id="wi-fi">
         <h2 class="minor-header-right">Тип жилья:</h2>
         <label for="hotel">Гостиница</label>
@@ -62,8 +62,8 @@
       </form>
       <div class="search-result">
         <h3>Найдено: 3</h3>
-        <ul class= "sorting">
         <span>Сортировка:</span>
+        <ul class= "sorting">
           <li>
             <a href="#">По цене</a>
           </li>
@@ -81,7 +81,7 @@
       </div>
       <div class="search-show">
         <article>
-          <h3>AMARA RESORT & SPA</h3>
+          <h3>Amara resort & spa</h3>
           <p class="article-info">Гостиница</p>
           <p class="article-info">От 4000 р.</p>
           <img class="article-img" src="img/hotel3.jpg" alt="Фото">
@@ -91,7 +91,7 @@
           <span class="rate">Рейтинг: 8,5</span>
         </article>
         <article>
-          <h3>DESERT QUAIL INN</h3>
+          <h3>Desert quail inn</h3>
           <p class="article-info">Мотель</p>
           <p class="article-info">От 3000 р.</p>
           <img class="article-img" src="img/hotel2.jpg" alt="Фото">
@@ -101,7 +101,7 @@
           <span class="rate">Рейтинг: 8,9</span>
         </article>
         <article>
-          <h3>VILLAS AT POCO DIABLO</h3>
+          <h3>Villas at poco diablo</h3>
           <p class="article-info">Апартаменты</p>
           <p class="article-info">От 2000 р.</p>
           <img class="article-img" src="img/hotel1.jpg" alt="Фото">
@@ -114,13 +114,13 @@
     </main>
     <footer class="main-footer">
       <section class="hashtag">
-        <h3>#VISITSEDONA</h3>
+        <h3>#Visitsedona</h3>
       </section>
       <section class="footer-social">
-        <a class="social-btn social-btn-twt" href="#">
+        <a class="social-btn social-btn-twitter" href="#">
           <img src="img/twitter.png" alt="Twitter">
         </a>
-        <a class="social-btn social-btn-fb" href="#">
+        <a class="social-btn social-btn-facebook" href="#">
           <img src="img/facebook.png" alt="Facebook">
         </a>
         <a class="social-btn social-btn-youtube" href="#">
