--- a/catalog.html
+++ b/catalog.html
@@ -87,7 +87,6 @@
           <img class="article-img" src="img/hotel3.jpg" alt="Фото">
           <a class="more-btn">Подробнее</a>
           <a class="book-btn">Забронировать</a>
-          <img class="stars" src="img/4stars.png" alt="Рейтинг">
           <span class="rate">Рейтинг: 8,5</span>
         </article>
         <article>
@@ -97,7 +96,6 @@
           <img class="article-img" src="img/hotel2.jpg" alt="Фото">
           <a class="more-btn">Подробнее</a>
           <a class="book-btn">Забронировать</a>
-          <img class="stars" src="img/3stars.png" alt="Рейтинг">
           <span class="rate">Рейтинг: 8,9</span>
         </article>
         <article>
@@ -107,7 +105,6 @@
           <img class="article-img" src="img/hotel1.jpg" alt="Фото">
           <a class="more-btn">Подробнее</a>
           <a class="book-btn">Забронировать</a>
-          <img class="stars" src="img/2stars.png" alt="Рейтинг">
           <span class="rate">Рейтинг: 9,2</span>
         </article>
       </div>
@@ -130,7 +127,7 @@
       <section class="footer-copyright">
         <p class="html-academy">Website by</p>
         <a class="btn" href="https://htmlacademy.ru">
-          <img src="img/htmlacademy.png" alt="HTML Academy">
+          <img src="img/htmlacademy.png" alt="HTML academy">
         </a>
       </section>
     </footer>
