--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
       <section class="footer-copyright">
         <p class="html-academy">Website by</p>
         <a class="btn" href="https://htmlacademy.ru">
-          <img src="img/htmlacademy.png" alt="html academy">
+          <img src="img/htmlacademy.png" alt="HTML academy">
         </a>
       </section>
     </footer>
