--- a/catalog.html
+++ b/catalog.html
@@ -82,6 +82,12 @@
           <a class="btn more-btn">Подробнее</a>
           <a class="btn book-btn">Забронировать</a>
           <span class="rate">Рейтинг: 8,5</span>
+          <ul class="stars">
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+          </ul>
         </article>
         <article>
           <h3>Desert quail inn</h3>
@@ -91,6 +97,11 @@
           <a class="btn more-btn">Подробнее</a>
           <a class="btn book-btn">Забронировать</a>
           <span class="rate">Рейтинг: 8,9</span>
+          <ul class="stars">
+            <li></li>
+            <li></li>
+            <li></li>
+          </ul>
         </article>
         <article>
           <h3>Villas at poco diablo</h3>
@@ -100,6 +111,10 @@
           <a class="btn more-btn">Подробнее</a>
           <a class="btn book-btn">Забронировать</a>
           <span class="rate">Рейтинг: 9,2</span>
+          <ul class="stars">
+            <li></li>
+            <li></li>
+          </ul>
         </article>
       </div>
     </main>
