--- a/index.html
+++ b/index.html
@@ -98,8 +98,8 @@
           <p class="to-do">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
         </div>
       </section>
-      <div class="search-block">
-          <h6>Поиск гостиницы в Седоне</h6>
+      <div class="search-block map">
+          <h6 class="search-name">Поиск гостиницы в Седоне</h6>
           <form class="search-form" action="#" method="post">
             <label for="date-in">Дата заезда:</label>
             <input type="date" id="date-in" name="date-in"/>
@@ -118,7 +118,7 @@
         <section class="hashtag">
           <h3>#Visitsedona</h3>
         </section>
-        <section class="footer-social clearfix">
+        <section class="footer-social">
           <a class="social-btn social-btn-twitter" href="#">
             <img src="img/twitter.png" alt="Twitter">
           </a>
