--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <header class="main-header">
       <div class="container">
-        <nav class="main-navigation">
+        <nav class="main-navigation clearfix">
           <ul>
             <li class="navigation-element left-navigation clearfix">
               <a href="#">Информация</a>
